# linear-algebra

./: .gitignore  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  appveyor.yml
.github/workflows/: ccpp.yml
ci/: appveyor.cmake  common.cmake  github.cmake  travis.cmake
include/: Compiler.h  Maths.h  Matrix.h  Vector.h
include/mat/: mat2x2.h  mat2x2.inl  mat3x3.h  mat3x3.inl  mat4x4.h  mat4x4.inl
include/vec/: bvec2.h  bvec2.inl  bvec3.h  bvec3.inl  bvec4.h  bvec4.inl  scalar1.h  scalar2.h  scalar3.h  scalar4.h  vec2.h  vec2.inl  vec3.h  vec3.inl  vec4.h  vec4.inl
test/: CMakeLists.txt  float.cpp  helpers.h  mat2x2.cpp  mat3x3.cpp  mat4x4.cpp  matrix.cpp  test.cpp  vec2.cpp  vec3.cpp  vec4.cpp  vector.cpp
